--- a/src/pages/menu/Menu.css
+++ b/src/pages/menu/Menu.css
@@ -1,18 +1,18 @@
-.container {
+.menu-container {
 	padding: 30px 30px;
 	background: #314ba0;
 }
-.wrapper {
+.menu-wrapper {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	gap: 20px;
 }
-img {
+.menu-img {
 	width: 400px;
 }
-span {
+.menu-wrapper span {
 	background: black;
 	height: 1px;
 	width: 400px;
@@ -20,7 +20,7 @@ span {
 }
 
 @media all and (min-width: 768px) {
-	img {
+	.menu-img {
 		width: auto;
 	}
 }
