--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -59,14 +59,16 @@ a {
 
 .bg-pink {
 	background-color: #e665c4;
-	height: auto;
-	padding: 15% 6%;
+	height: 100vh;
+	box-sizing: border-box;
+	padding: 6% 6%;
 }
 .split {
 	display: flex;
 	flex-direction: column-reverse;
-	justify-content: center;
+	justify-content: space-evenly;
 	align-items: center;
+	height: 100%;
 }
 
 .center-text h2,
@@ -77,33 +79,38 @@ a {
 	word-wrap: break-word;
 }
 .center-text h2:first-child {
-	font-size: 2rem;
+	font-size: 1.8rem;
 	font-family: 'Abel';
 }
 .center-text h2 {
 	font-size: 1.2rem;
+	line-height: 2rem;
 }
 .center-text .link {
 	text-decoration: underline;
+	text-underline-offset: 4px;
+	font-size: 1.1rem;
 }
 .split img {
-	margin: 7% 0;
-	width: 80vw;
+	max-width: 100%;
+	max-height: 100%;
+	height: 65vh;
 }
-@media all and (min-width: 520px) {
-	.bg-pink .split {
+
+@media all and (min-width: 820px) {
+	.split {
 		flex-direction: row;
 		align-items: center;
+		justify-content: space-evenly;
 	}
 	.bg-pink .split img {
-		width: 45vw;
+		height: 80vh;
+	}
+	.center-text {
 		margin: 0;
 	}
 	.bg-pink .split .center-text {
-		padding-right: 6%;
-	}
-	.bg-pink {
-		padding: 6% 6%;
+		width: 40vw;
 	}
 }
 
@@ -111,26 +118,25 @@ a {
 
 .bg-blue {
 	background-color: #314ba0;
-	height: auto;
-	padding: 15% 6%;
+	height: 100vh;
+	box-sizing: border-box;
+	padding: 6% 6%;
 }
 .bg-blue h2 {
 	color: white;
+	font-size: 1.4rem;
+	line-height: 2rem;
 }
+.bg-blue .split img {
+	height: 40vh;
+}
+
 @media all and (min-width: 520px) {
-	.bg-blue .split {
-		flex-direction: row-reverse;
-		align-items: center;
-	}
 	.bg-blue .split img {
-		width: 45vw;
-		margin: 0;
+		height: 50vw;
 	}
 	.bg-blue .split .center-text {
 		padding-left: 6%;
-	}
-	.bg-blue {
-		padding: 6% 6%;
 	}
 }
 
