--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -19,6 +19,7 @@ h1 {
 	color: black;
 	text-decoration: none;
 	display: block;
+	margin: 1rem 1rem;
 }
 .item:hover {
 	text-decoration: underline;
